--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,6 @@
 #Grails Metadata file
-#Sun Dec 29 22:31:28 CET 2013
-app.grails.version=2.3.4
+#Wed Feb 05 13:33:18 CET 2014
+app.grails.version=2.3.5
 app.name=HalTest
+app.servlet.version=3.0
 app.version=0.1
