--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,5 @@
 #Grails Metadata file
-#Fri Mar 21 18:58:34 CET 2014
-app.grails.version=2.3.7
+#Sun May 25 14:55:44 CEST 2014
+app.grails.version=2.4.0
 app.name=HalTest
-app.servlet.version=3.0
-app.version=0.1
+app.version=0.2
