updated to Grails 2.4.4

--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,5 @@
 #Grails Metadata file
-#Mon Jul 07 20:43:40 CEST 2014
-app.grails.version=2.4.2
+#Sun Jan 04 23:26:48 CET 2015
+app.grails.version=2.4.4
 app.name=HalTest
 app.version=0.2
